# embrangler_pelican

./: .bowerrc  .gitignore  .pre-commit-config.yaml  Gruntfile.js  Makefile  Pipfile  README.md  TODO.txt  deploy.sh  develop_server  develop_server.sh  new.py  package.json  pelican.conf.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
content/pages/: 404.md  about.md  cv.md  list.md  pitch.md
content/posts/: 2009-09-02-installing-opengl-glut-kubuntu-904.md  2009-10-05-ed60-labaree.md  2009-10-21-ed60-how-people-learn-ch1.md  2009-11-03-educ60-nov-2-lecture-notes.md  2009-11-14-hacking-wordpress-check-contact-messages-for-spam-using-wordpress-built-in-akismet-spam-for-comments.md  2009-11-15-my-list-of-firefox-add-ons.md  2010-01-04-my-sumo-local-development-environment.md  2010-02-27-upgrading-windows-vistaor-7rc-to-windows-7-on-dual-boot-with-linux-ubuntu.md  2010-03-12-quoteden-moving-to-kohana-3.md  2010-03-21-embrangler-moving-to-jekyll.md  2010-04-11-weekly-update-apr-5-9.md  2010-04-16-weekly-update-apr-12-16.md  2010-04-25-testing-in-kohana-3.md  2010-04-25-weekly-update-apr-19-25.md  2010-05-03-weekly-update-apr-26-30.md  2010-05-19-weekly-update-may-10-14.md  2010-05-22-access-control-django.md  2010-05-26-weekly-update-may-17-21.md  2010-08-04-full-time-at-mozilla.md  2010-08-20-ajax-uploads-images-in-django.md  2010-09-30-python-debugging-pdb---quick-tip.md  2010-12-03-migrating-large-amounts-of-data.md  2010-12-11-belated-birthday-resolutions.md  2011-01-31-python-scoping-understading-legb.md  2011-03-01-datastore-an-abstraction-layer.md  2012-01-08-caching-django-views-with-nginx-and-memcache.md  2012-01-12-serve-media-from-amazon-s3-and-keep-it-in-sync.md  2012-01-20-finding-flow.md  2012-01-23-belated-birthday-resolutions.md  2012-01-24-sowink-discontinued.md  2012-08-29-introducing-google-app-engine-paginator.md  2012-12-30-belated-birthday-resolutions.md  2013-01-20-finding-flow.md  2013-01-29-aggressive-selfishness-is-not-the-only-path-to-success.md  2013-02-28-time-to-look-ahead-paradoxically.md  2013-03-01-be-vulnerable-so-you-can-be-happy.md  2013-04-07-have-we-forgotten-to-be-social.md  2013-04-30-decision-decisions-how-we-love-and-hate-options.md  2013-12-31-belated-birthday-resolutions.md  2014-10-14-on-the-market.md  (+42 more)
output/: README.md
scripts/: export-requirements.sh  vercel-build.sh
themes/embrangler/templates/: article.html  base.html  index.html  (+4 more)
(+17 files in other folders)
