[tool.poetry]
name = "embrangler"
version = "0.1.0"
description = ""
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]

[tool.poetry.dependencies]
python = "3.14.2"
Markdown = "*"
pelican = "*"

[tool.black]
line-length = 100
target_version = ['py314']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | node_modules
    | public
    | src
    | staticfiles
  )/
)
'''

[build-system]
requires = ["poetry>=2"]
build-backend = "poetry.masonry.api"
