[tool.poetry]
name = "embrangler"
version = "0.1.0"
description = ""
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.12,<4"
Markdown = "*"
pelican = "*"
# anyio imports typing_extensions on all Python versions but only declares it for older ones
typing_extensions = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"

[tool.black]
line-length = 100
target_version = ['py314']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | node_modules
    | public
    | src
    | staticfiles
  )/
)
'''

[build-system]
requires = ["poetry>=2"]
build-backend = "poetry.masonry.api"
