[project]
name = "embrangler"
version = "0.1.0"
description = "Personal blog (Pelican)"
authors = [{ name = "Paul Craciunoiu", email = "paul@craciunoiu.net" }]
requires-python = ">=3.12,<4"
dependencies = [
    "Markdown>=3.1",
    "pelican>=4.12",
    # anyio imports typing_extensions on all Python versions but only declares it for older ones
    "typing-extensions",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target_version = ['py314']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | node_modules
    | public
    | src
    | staticfiles
  )/
)
'''

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
